# insta

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: copilot-instructions.md
.github/prompts/: backend.prompt.md  database.prompt.md  frontend.prompt.md  reviewer.prompt.md
.github/workflows/: desktop.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts  router-types.ts  trpc.ts
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  eas.json  metro.config.js  package.json  tamagui.config.ts  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/components/: MediaCarousel.tsx  MentionText.tsx  PostCard.tsx  Providers.tsx
apps/mobile/lib/: store.ts  trpc.ts  upload.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
docs/: progress.md
docs/decisions/: 001-auth.md  002-api-structure.md  003-realtime-strategy.md  004-client-state.md  005-feed-algorithm.md  006-file-uploads.md  007-mobile-auth.md  008-mobile-realtime.md  009-desktop-framework.md
docs/mobile/: README.md
docs/specs/features/: auth.spec.md  desktop.spec.md  follow.spec.md  interactions.spec.md  messages.spec.md  notifications.spec.md  posts.spec.md  settings.spec.md
(+104 files in other folders)
